# DirectMusic

./: .gitignore  CMakeLists.txt  README.md
include/: band.h  directmusic.h  dlscollection.h  hydra.h  info.h  logger.h  mixer.h  music.h  pattern.h  patternlist.h  reference.h  riff.h  segment.h  soundfont.h  structs.h  style.h  track.h  wave.h
source/: band.cpp  directmusic.cpp  dlscollection.cpp  hydra.cpp  info.cpp  logger.cpp  mixer.cpp  music.cpp  pattern.cpp  patternlist.cpp  reference.cpp  riff.cpp  segment.cpp  soundfont.cpp  style.cpp  track.cpp  wave.cpp
